Se añade opción XXL

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -44,6 +44,7 @@
                     <option value="pequeña">Pequeña</option>
                     <option value="mediana" selected>Mediana</option>
                     <option value="grande">Grande</option>
+                    <option value="xxl">XXL</option>
                 </select>
             </div>
             <div>
