Añadida la funcionalidad completa de mostrar la disponibilidad al cambiar el tamaño de la pizza

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/estilos.css" rel="stylesheet" type="text/css">
+	<script src="js/jquery-3.6.1.min.js"></script>
     <title>Pizza Full Stack Release</title>
 </head>
 <body>
@@ -40,12 +41,13 @@
             <h2 title="Se van a cumplimentar datos del pedido">Datos del pedido</h2>
             <div>
                 <label for="tam">Tamaño de la pizza: </label>
-                <select name="tam" id="tam">
-                    <option value="pequeña">Pequeña</option>
-                    <option value="mediana" selected>Mediana</option>
-                    <option value="grande">Grande</option>
-                    <option value="xxl">XXL</option>
+                <select name="tamano" id="tamano">
+                    <option value="S">Pequeña</option>
+                    <option value="M" selected>Mediana</option>
+                    <option value="L">Grande</option>
+                    <option value="XXL">XXL</option>
                 </select>
+                <span id="resultado_tamano"></span>
             </div>
             <div>
                 <label>Marcar ingredientes deseados:</label><br>
@@ -62,3 +64,4 @@
     </form>
 </body>
 </html>
+<script src="js/script.js"></script>
