Se corrigen errores HTML5 Validator

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -40,7 +40,7 @@
         <div class="datos_pedido">
             <h2 title="Se van a cumplimentar datos del pedido">Datos del pedido</h2>
             <div>
-                <label for="tam">Tamaño de la pizza: </label>
+                <label for="tamano">Tamaño de la pizza: </label>
                 <select name="tamano" id="tamano">
                     <option value="S">Pequeña</option>
                     <option value="M" selected>Mediana</option>
@@ -62,6 +62,6 @@
         <button type="submit" id="enviar">Enviar</button>
 
     </form>
+<script src="js/script.js"></script>
 </body>
 </html>
-<script src="js/script.js"></script>
